--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: 'Ubuntu Light';
   src: url("../fonts/Ubuntu-Light.eot");
@@ -38,12 +39,18 @@ a {
 }
 
 .main {
-  background: url(../img/bg-main.png);
-  background-size: 100%;
+  height: 109vh;
+  background: url("../img/bg-main.png") no-repeat center;
+  background-size: cover;
+  padding-top: 37px;
+  margin-bottom: 100px;
 }
 
 .main .header .logo-title {
   font-size: 24px;
+  text-transform: uppercase;
+  color: #fff;
+  font-family: "Ubuntu Bold" , sans-serif;
 }
 
 .main .header .menu {
@@ -54,5 +61,171 @@ a {
 
 .main .header .menu__link {
   font-size: 18px;
+}
+
+.main .header .menu__link a {
+  color: #fff;
+  opacity: 0.5;
+}
+
+.main .header .menu__link a:hover {
+  text-decoration: none;
+  color: #ffffff;
+  opacity: 2;
+}
+
+.main .header .icon {
+  text-align: right;
+}
+
+.main .header .icon-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.main .header .icon-list li {
+  display: inline-block;
+  margin-right: 25px;
+}
+
+.main .header .icon-list li a {
+  color: #fff;
+  font-size: 20px;
+}
+
+@font-face {
+  font-family: 'fontello';
+  src: url("../fonts/fontello.eot?68611799");
+  src: url("../fonts/fontello.eot?68611799#iefix") format("embedded-opentype"), url("../fonts/fontello.woff2?68611799") format("woff2"), url("../fonts/fontello.woff?68611799") format("woff"), url("../fonts/fontello.ttf?68611799") format("truetype"), url("../fonts/fontello.svg?68611799#fontello") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?68611799#fontello') format('svg');
+  }
+}
+*/
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: never;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-vk:before {
+  content: '\e800';
+}
+
+/* '' */
+.icon-facebook:before {
+  content: '\f09a';
+}
+
+/* '' */
+.icon-instagram:before {
+  content: '\f16d';
+}
+
+/* '' */
+.main-content {
+  position: relative;
+}
+
+.main-content .content-block {
+  margin-top: 100px;
+}
+
+.main-content .content-block__title {
+  color: #fff;
+  font-size: 50px;
+  font-family: "Ubuntu Bold" , sans-serif;
+}
+
+.main-content .content-block__subtitle {
+  margin-top: 25px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.main-content .content-block .btn-block .btn {
+  margin-top: 45px;
+  padding: 14px 40px;
+  margin-right: 13px;
+  color: #fff;
+  font-size: 18px;
+  font-family: "Ubuntu Bold" , sans-serif;
+}
+
+.main-content .content-block .btn-block .btn-download {
+  background-color: #fc6a42;
+}
+
+.main-content .content-block .btn-block .btn-features {
+  background-color: #4466c9;
+}
+
+.main-content .anchor-btn {
+  display: inline-block;
+  width: 39px;
+  height: 39px;
+  border-radius: 50%;
+  background-color: red;
+  position: absolute;
+  transform: translateX(550px);
+  margin-top: 55px;
+}
+
+.main-content .anchor-btn-block {
+  position: relative;
+}
+
+.main-content .anchor-btn-block span, .main-content .anchor-btn-block::before {
+  position: absolute;
+  top: 20px;
+  margin-top: -1px;
+  left: 14px;
+  margin-left: -10px;
+  height: 2px;
+  width: 17px;
+  background-color: #000;
+  line-height: px;
+  transform: rotate(45deg);
+}
+
+.main-content .anchor-btn-block span::before, .main-content .anchor-btn-block::before::before {
+  content: '';
+  transform: translateX(-10px);
+}
+
+.main-content .anchor-btn:hover {
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
