--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,14 +1,40 @@
 .main
-  background: url(../img/bg-main.png) 
-  background-size: 100% 
+  height: 109vh
+  background: url('../img/bg-main.png') no-repeat center 
+  background-size: cover 
+  padding-top: 37px
+  margin-bottom: 100px
   .header
     .logo
       &-title
         font-size: 24px
+        text-transform: uppercase
+        color: #fff
+        +bold()
     .menu
       list-style: none
       display: flex
       justify-content: space-between
       &__link
         font-size: 18px
-        
+        a
+          color: #fff 
+          opacity: 0.5
+          &:hover
+            text-decoration: none
+            color: #ffffff 
+            opacity: 2
+    .icon
+      text-align: right
+      &-list 
+        list-style: none
+        padding: 0
+        margin: 0
+        li 
+          display: inline-block
+          margin-right: 25px
+          a 
+            color: #fff
+            font-size: 20px
+      
+            
